--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<base href="https://cdn.jsdelivr.net/gh/genizy/fnaf@latest/4/">
+	<base href="https://cdn.jsdelivr.net/gh/genizy/fnaf@main/sl/">
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="HandheldFriendly" content="true" />
-    <title>Five Nights at Freddy's 4</title>
+    <title>Five Nights at Freddy's Sister Location</title>
 </head>
 
 <body>
