--- a/.gitignore
+++ b/.gitignore
@@ -1,111 +1,29 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<Module>
 
+
+<!-- Ultimate Game Stash file--> 
+<!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
+
+
+
+<Module>
+<ModulePrefs title="Google.com" />
+<Content type="html"><![CDATA[
+<html lang="en">
 <head>
-    <base href="https://cdn.jsdelivr.net/gh/gn-math/assets@51462750d29b68ac1e33887c1bf13d9c478d5ead/198/">
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Slope Plus</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <style>
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            height: 100%;
-            width: 100%;
-        }
-
-        #unity-container {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-    </style>
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/UnityLoader.js"></script>
-    <script>
-        function mergeFiles(fileParts) {
-            return new Promise((resolve, reject) => {
-                let buffers = [];
-
-                function fetchPart(index) {
-                    if (index >= fileParts.length) {
-                        let mergedBlob = new Blob(buffers);
-                        let mergedFileUrl = URL.createObjectURL(mergedBlob);
-                        resolve(mergedFileUrl);
-                        return;
-                    }
-                    fetch(fileParts[index]).then((response) => response.arrayBuffer()).then((data) => {
-                        buffers.push(data);
-                        fetchPart(index + 1);
-                    }).catch(reject);
-                }
-                fetchPart(0);
-            });
-        }
-
-        function getParts(file, start, end) {
-            let parts = [];
-            for (let i = start; i <= end; i++) {
-                parts.push(file + ".part" + i);
-            }
-            return parts;
-        }
-
-        window.addEventListener('resize', resizeGameContainer);
-
-        function resizeGameContainer() {
-            const container = document.getElementById('gameContainer');
-            if (container) {
-                const width = window.innerWidth;
-                const height = window.innerHeight;
-                container.style.width = `${width}px`;
-                container.style.height = `${height}px`;
-            }
-        }
-
-        window.onload = function () {
-            resizeGameContainer();
-
-            Promise.all([
-                mergeFiles(getParts("https://cdn.jsdelivr.net/gh/gn-math/assets@51462750d29b68ac1e33887c1bf13d9c478d5ead/198/Build/WEB1.2.1.data.unityweb", 1, 2))
-            ]).then(([dataUrl]) => {
-                let json = {
-                    companyName: "Slope Plus",
-                    productName: "Slope Plus",
-                    dataUrl: dataUrl,
-                    wasmCodeUrl: "https://cdn.jsdelivr.net/gh/gn-math/assets@51462750d29b68ac1e33887c1bf13d9c478d5ead/198/Build/WEB1.2.1.wasm.code.unityweb",
-                    wasmFrameworkUrl: "https://cdn.jsdelivr.net/gh/gn-math/assets@51462750d29b68ac1e33887c1bf13d9c478d5ead/198/Build/WEB1.2.1.wasm.framework.unityweb",
-                    TOTAL_MEMORY: 268435456,
-                    graphicsAPI: ["WebGL 2.0", "WebGL 1.0"],
-                    webglContextAttributes: {
-                        preserveDrawingBuffer: false
-                    },
-                    splashScreenStyle: "Dark",
-                    backgroundColor: "#000000"
-                }
-                let blob = new Blob([JSON.stringify(json)], {
-                    type: 'application/json'
-                });
-                let blobUrl = URL.createObjectURL(blob);
-                UnityLoader.instantiate("gameContainer", json, {
-                    onProgress: UnityProgress,
-                    url: blobUrl
-                });
-            });
-        };
-    </script>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AndreajnRcm4/b398dl2h74v@9a23fbb2373d743a564873251cbb57736ebc1f73/style.css" type="text/css" />
+    
 </head>
-
 <body>
-    <div class="webgl-content">
-        <div id="gameContainer"></div>
-    </div>
-</body>
+<script src="https://cdn.jsdelivr.net/gh/u-cvlassrom-y/google@main/ruffle.js"></script>
 
+<object width="100%" height="100%">
+    <param name="movie" value="https://cdn.jsdelivr.net/gh/bubbls/UGS-file-encryption@97af31ec5b7d4858652ff2304c42200dc472fc7d/HappyWheels.swf">
+    <embed src="https://cdn.jsdelivr.net/gh/bubbls/UGS-file-encryption@97af31ec5b7d4858652ff2304c42200dc472fc7d/HappyWheels.swf" width="100%" height="100%">
+</body>
 </html>
+]]></Content>
+</Module>
