--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@
 <script src="https://cdn.jsdelivr.net/gh/u-cvlassrom-y/google@main/ruffle.js"></script>
 
 <object width="100%" height="100%">
-    <param name="movie" value="https://cdn.jsdelivr.net/gh/bubbls/UGS-file-encryption@97af31ec5b7d4858652ff2304c42200dc472fc7d/HappyWheels.swf">
-    <embed src="https://cdn.jsdelivr.net/gh/bubbls/UGS-file-encryption@97af31ec5b7d4858652ff2304c42200dc472fc7d/HappyWheels.swf" width="100%" height="100%">
+    <param name="movie" value="https://cdn.jsdelivr.net/gh/benito-camarillo/Whitespider@58638549cf66e46471d33ed01827017dd067acb5/games/flash/learn-to-fly.swf">
+    <embed src="https://cdn.jsdelivr.net/gh/benito-camarillo/Whitespider@58638549cf66e46471d33ed01827017dd067acb5/games/flash/learn-to-fly.swf" width="100%" height="100%">
 </body>
 </html>
 ]]></Content>
