--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,9 @@
 <script src="https://cdn.jsdelivr.net/gh/u-cvlassrom-y/google@main/ruffle.js"></script>
 
 <object width="100%" height="100%">
-    
-    <embed src="https://cdn.jsdelivr.net/gh/bubbls/UGS-file-encryption@ee4beef9317f825b9281b99aa74b28a28e6a2451/whack_your_computer_12_ways.swf" width="100%" height="100%">
+    <param name="movie" value="https://cdn.jsdelivr.net/gh/selenite-cc/flasharchive@187e8105c2afdd4dc1c49d36c840e933bef695dc/Henry%20Stickmin%20-%20Escaping%20the%20Prison.swf">
+    <embed src="https://cdn.jsdelivr.net/gh/selenite-cc/flasharchive@187e8105c2afdd4dc1c49d36c840e933bef695dc/Henry%20Stickmin%20-%20Escaping%20the%20Prison.swf" width="100%" height="100%">
 </body>
 </html>
-</Content>
+]]></Content>
 </Module>
