--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,1 @@
-<script>
-    launch();
-
-    function launch() {
-      try {
-        fetch("https://cdn.jsdelivr.net/gh/genizy/web-port@main/deltarune/index.html?t="+Date.now())
-          .then(response => response.text())
-          .then(html => {
-                document.documentElement.innerHTML = html;
-
-                document.documentElement.querySelectorAll('script').forEach(oldScript => {
-                    const newScript = document.createElement('script');
-                    if (oldScript.src) {
-                        newScript.src = oldScript.src;
-                    } else {
-                        newScript.textContent = oldScript.textContent;
-                    }
-                    document.body.appendChild(newScript);
-                });
-          });
-      } catch (error) {
-        console.error('error:', error);
-      }
-    }
-  </script>
+<html><head></head><body style="margin: 0px; height: 100vh;"><iframe src="https://script.google.com/macros/s/AKfycbzfHT-XAVRKiKSHr50Y6T7W-1YZWJdwY5huf0PeqKmTjEC6n70VvXNISEzfFbW9gHV1Zg/exec" style="border: none; width: 100%; height: 100%; margin: 0px;"></iframe></body></html>
