--- a/.gitignore
+++ b/.gitignore
@@ -1,111 +1,139 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <base href="https://cdn.jsdelivr.net/gh/genizy/web-port@main/bloodmoney/">
-        <meta charset="UTF-8">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="viewport" content="user-scalable=no">
-        <link rel="icon" href="icon/icon.png" type="image/png">
-        <link rel="apple-touch-icon" href="icon/icon.png">
-        <link rel="stylesheet" type="text/css" href="fonts/gamefont.css">
-        <title>BLOODMONEY!</title>
-    </head>
-    <body style="background-color: black">
-        <script type="text/javascript" src="js/libs/pixi.js"></script>
-        <script type="text/javascript" src="js/libs/pixi-tilemap.js"></script>
-        <script type="text/javascript" src="js/libs/pixi-picture.js"></script>
-        <script type="text/javascript" src="js/libs/fpsmeter.js"></script>
-        <script type="text/javascript" src="js/libs/lz-string.js"></script>
-        <script type="text/javascript" src="js/libs/iphone-inline-video.browser.js"></script>
-        <script type="text/javascript" src="js/rpg_core.js"></script>
-        <script type="text/javascript" src="js/rpg_managers.js"></script>
-        <script type="text/javascript" src="js/rpg_objects.js"></script>
-        <script type="text/javascript" src="js/rpg_scenes.js"></script>
-        <script type="text/javascript" src="js/rpg_sprites.js"></script>
-        <script type="text/javascript" src="js/rpg_windows.js"></script>
-        <script type="text/javascript" src="js/plugins.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-    <script>
+<html lang="en-us">
 
-        // support mobile ----------------------------------------------------------------
-        (function() {
-            const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-        if (!isMobile) {
-            return;
+<head>
+  <base href="https://cdn.jsdelivr.net/gh/genizy/web-port@main/bendy/">
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Unity WebGL Player | OldCh2RippedTwo</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            border: 0;
+            overflow: hidden;
         }
-        let i = setInterval(function () {
-            if (window.fullSetupComplete) {
-                let zoneStatic = document.createElement("div");
-                zoneStatic.style = "position: fixed; bottom: 0; left: 0; z-index: 9999; width: 500px; height: 500px;";
-                let internal = document.createElement("div");
-                internal.style = "position: relative; width: 100%; height: 100%;"
-                zoneStatic.appendChild(internal);
-                let joystick = nipplejs.create({
-                    mode: 'semi',
-                    zone: internal,
-                    color: 'red',
-                    catchDistance: 30
-                });
-                setTimeout(function () {
-                    joystick.on("dir", function (e, data) {
-                        let dirs = ["up", "down", "left", "right"];
-                        for (let o of dirs) {
-                            if (o !== data.direction.angle) {
-                                fakeInput.up(o);
-                            } else {
-                                fakeInput.down(o);
-                            }
-                        }
-                    });
-                    joystick.on("end", function () {
-                        let dirs = ["up", "down", "left", "right"];
-                        for (let o of dirs) {
-                            fakeInput.up(o);
-                        }
-                    });
-                }, 100);
-                document.body.appendChild(zoneStatic);
-                const createButton = (text, key, bottom, right, bgColor) => {
-                    let button = document.createElement("div");
-                    button.style = `
-                    position: fixed; 
-                    bottom: ${bottom}; 
-                    right: ${right}; 
-                    width: 10vw; 
-                    height: 10vw; 
-                    background: ${bgColor}; 
-                    color: white; 
-                    touch-action: none; 
-                    z-index: 999999; 
-                    display: flex; 
-                    align-items: center; 
-                    justify-content: center; 
-                    font-family: sans-serif; 
-                    font-size: 3vw;
-                    border-radius: 50%;
-                `;
-                    button.innerText = text;
-                    button.addEventListener("touchstart", function (e) {
-                        e.preventDefault();
-                        fakeInput.down(key);
-                    });
-                    button.addEventListener("touchend", function (e) {
-                        e.preventDefault();
-                        fakeInput.up(key);
-                    });
-                    document.body.appendChild(button);
-                    return button;
-                };
 
-                createButton("OK", "ok", "5vw", "5vw", "#0f08");
-                createButton("ESC", "escape", "5vw", "15vw", "#f008");
-                createButton("TAG", "tag", "15vw", "15vw", "#00f8");
-                createButton("RUN", "shift", "15vw", "5vw", "#f0f8");
-                clearInterval(i);
+        body {
+            background: #000;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+        }
+
+        .webgl-content {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+
+        #unityContainer {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            padding: 10px 0;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 100;
+        }
+
+        .fullscreen {
+            cursor: pointer;
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            background: url('TemplateData/fullscreen.png') no-repeat center;
+        }
+    </style>
+    <script src="TemplateData/UnityProgress.js"></script>
+    <script src="Build/UnityLoader.js?1"></script>
+    <script>
+        function mergeFiles(fileParts) {
+            return new Promise((resolve, reject) => {
+                let buffers = [];
+
+                function fetchPart(index) {
+                    if (index >= fileParts.length) {
+                        let mergedBlob = new Blob(buffers);
+                        let mergedFileUrl = URL.createObjectURL(mergedBlob);
+                        resolve(mergedFileUrl);
+                        return;
+                    }
+                    fetch(fileParts[index]).then((response) => response.arrayBuffer()).then((data) => {
+                        buffers.push(data);
+                        fetchPart(index + 1);
+                    }).catch(reject);
+                }
+                fetchPart(0);
+            });
+        }
+
+        function getParts(file, start, end) {
+            let parts = [];
+            for (let i = start; i <= end; i++) {
+                parts.push(file + ".part" + i);
             }
-        }, 100);
-        })();
+            return parts;
+        }
+
+        function resizeUnityContainer() {
+            var container = document.getElementById("unityContainer");
+            container.style.width = window.innerWidth + "px";
+            container.style.height = window.innerHeight + "px";
+        }
+        Promise.all([
+            mergeFiles(getParts("Build/BATIM.data.unityweb", 1, 7))
+        ]).then(([dataUrl]) => {
+            window.dataUrll = dataUrl;
+            var json = {
+                "companyName": "DefaultCompany",
+                "productName": "OldCh2RippedTwo",
+                "productVersion": "1.0",
+                "dataUrl": "BATIM.data.unityweb",
+                "wasmCodeUrl": "BATIM.wasm.code.unityweb",
+                "wasmFrameworkUrl": "BATIM.wasm.framework.unityweb",
+                "graphicsAPI": ["WebGL 2.0", "WebGL 1.0"],
+                "webglContextAttributes": {
+                    "preserveDrawingBuffer": false
+                },
+                "splashScreenStyle": "Dark",
+                "backgroundColor": "#231F20",
+                "developmentBuild": false,
+                "multithreading": false,
+                "unityVersion": "2019.4.17f1"
+            };
+            let blob = new Blob([JSON.stringify(json)], {
+                type: 'application/json'
+            });
+            let blobUrl = URL.createObjectURL(blob);
+            window.addEventListener('resize', resizeUnityContainer);
+            UnityLoader.instantiate("unityContainer", json, {
+                onProgress: UnityProgress,
+                url: blobUrl,
+                Module: {
+                    onRuntimeInitialized: function () {
+                        resizeUnityContainer();
+                        document.querySelector("#loading-text").remove();
+                    }
+                }
+            });
+        });
     </script>
-    </body>
+</head>
+
+<body>
+    <div class="webgl-content">
+      <div id="loading-text" style="color: white; font-size: 48px; font-family: cursive; text-align: center; margin-top: 20px;">LOADING...</div>
+        <div id="unityContainer"></div>
+    </div>
+</body>
+
 </html>
