--- a/.gitignore
+++ b/.gitignore
@@ -1,139 +1,34 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 
 <head>
-  <base href="https://cdn.jsdelivr.net/gh/genizy/web-port@main/bendy/">
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Unity WebGL Player | OldCh2RippedTwo</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            border: 0;
-            overflow: hidden;
-        }
-
-        body {
-            background: #000;
-            position: fixed;
-            width: 100%;
-            height: 100%;
-        }
-
-        .webgl-content {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-        }
-
-        #unityContainer {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-        }
-
-        .footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            text-align: center;
-            padding: 10px 0;
-            background: rgba(0, 0, 0, 0.5);
-            z-index: 100;
-        }
-
-        .fullscreen {
-            cursor: pointer;
-            display: inline-block;
-            width: 24px;
-            height: 24px;
-            background: url('TemplateData/fullscreen.png') no-repeat center;
-        }
-    </style>
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/UnityLoader.js?1"></script>
-    <script>
-        function mergeFiles(fileParts) {
-            return new Promise((resolve, reject) => {
-                let buffers = [];
-
-                function fetchPart(index) {
-                    if (index >= fileParts.length) {
-                        let mergedBlob = new Blob(buffers);
-                        let mergedFileUrl = URL.createObjectURL(mergedBlob);
-                        resolve(mergedFileUrl);
-                        return;
-                    }
-                    fetch(fileParts[index]).then((response) => response.arrayBuffer()).then((data) => {
-                        buffers.push(data);
-                        fetchPart(index + 1);
-                    }).catch(reject);
-                }
-                fetchPart(0);
-            });
-        }
-
-        function getParts(file, start, end) {
-            let parts = [];
-            for (let i = start; i <= end; i++) {
-                parts.push(file + ".part" + i);
-            }
-            return parts;
-        }
-
-        function resizeUnityContainer() {
-            var container = document.getElementById("unityContainer");
-            container.style.width = window.innerWidth + "px";
-            container.style.height = window.innerHeight + "px";
-        }
-        Promise.all([
-            mergeFiles(getParts("Build/BATIM.data.unityweb", 1, 7))
-        ]).then(([dataUrl]) => {
-            window.dataUrll = dataUrl;
-            var json = {
-                "companyName": "DefaultCompany",
-                "productName": "OldCh2RippedTwo",
-                "productVersion": "1.0",
-                "dataUrl": "BATIM.data.unityweb",
-                "wasmCodeUrl": "BATIM.wasm.code.unityweb",
-                "wasmFrameworkUrl": "BATIM.wasm.framework.unityweb",
-                "graphicsAPI": ["WebGL 2.0", "WebGL 1.0"],
-                "webglContextAttributes": {
-                    "preserveDrawingBuffer": false
-                },
-                "splashScreenStyle": "Dark",
-                "backgroundColor": "#231F20",
-                "developmentBuild": false,
-                "multithreading": false,
-                "unityVersion": "2019.4.17f1"
-            };
-            let blob = new Blob([JSON.stringify(json)], {
-                type: 'application/json'
-            });
-            let blobUrl = URL.createObjectURL(blob);
-            window.addEventListener('resize', resizeUnityContainer);
-            UnityLoader.instantiate("unityContainer", json, {
-                onProgress: UnityProgress,
-                url: blobUrl,
-                Module: {
-                    onRuntimeInitialized: function () {
-                        resizeUnityContainer();
-                        document.querySelector("#loading-text").remove();
-                    }
-                }
-            });
-        });
-    </script>
+	<base href="https://cdn.jsdelivr.net/gh/genizy/fnaf@latest/4-halloween/">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="HandheldFriendly" content="true" />
+    <title>Five Nights at Freddy's 4 Halloween</title>
 </head>
 
 <body>
-    <div class="webgl-content">
-      <div id="loading-text" style="color: white; font-size: 48px; font-family: cursive; text-align: center; margin-top: 20px;">LOADING...</div>
-        <div id="unityContainer"></div>
+    <div style="display: inline-block; -webkit-user-select: none; text-align: left">
+        <canvas id="MMFCanvas" width="1280" height="720"> Your browser does not support Canvas, Please try again. </canvas>
     </div>
+    <div id="progress-container">
+        <div style="margin-bottom: 6px;">Downloading... <span id="download-text">0%</span></div>
+        <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
+            <div id="download-bar" style="height: 10px; background: #3b82f6; width: 0%; transition: width 0.2s;"></div>
+        </div>
+        <div style="margin: 12px 0 6px;">Extracting... <span id="extract-text">0%</span></div>
+        <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
+            <div id="extract-bar" style="height: 10px; background: #10b981; width: 0%; transition: width 0.2s;"></div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
